fixed: footer z-index

--- a/src/global.less
+++ b/src/global.less
@@ -20,6 +20,7 @@ body,
 }
 .ant-layout-footer {
   background: #1f2221;
+  z-index: 999;
 }
 .ant-pro-global-footer {
   margin: 0;
