--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -60,4 +60,5 @@
   left: 0;
   bottom: 0;
   width: 100%;
+  z-index: 999;
 }
