--- a/src/pages/wrappers/index.less
+++ b/src/pages/wrappers/index.less
@@ -47,6 +47,7 @@ body {
 
 .footerstatic {
   position: static;
+  z-index: 999;
   .ant-pro-global-footer{
     margin: 0;
     background: #1f2221;
